<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_notify"
        android:orderInCategory="80"
        android:icon="@mipmap/ic_notifications_white_24dp"
        android:title="@string/action_notify"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_search"
        android:orderInCategory="90"
        android:icon="@mipmap/ic_search_white_24dp"
        android:title="@string/action_search"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_new"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_add_white_24dp"
        android:title="@string/action_new"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:showAsAction="ifRoom" />
    <!--
    <item
        android:id="@+id/ab_search"
        android:orderInCategory="80"
        android:title="action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="90"
        android:title="action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom"/>
        -->
</menu>
