<?xml version="1.0" encoding="utf-8"?>
<!--<TextView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:textSize="24dp"-->
    <!--android:padding="10dp">-->
<!--</TextView>-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#e0e0e0"
    android:backgroundTintMode="multiply">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingTop="8dp"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        >
        <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="100dp"
            card_view:cardBackgroundColor="#FFFFFF"
            card_view:cardCornerRadius="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp">
                <com.clearday.ywl.isay.CircleImageView
                    android:id="@+id/voice_circleImageView"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/avatar80px"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="16dp">

                    <TextView
                        android:id="@+id/voice_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:paddingTop="8dp"
                        android:textStyle="bold"
                        android:textSize="18dp">
                    </TextView>

                    <TextView
                        android:id="@+id/voice_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2015-11-19"
                        android:paddingTop="8dp">
                    </TextView>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cardtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/cardview_contents"
                    />
            </LinearLayout>
                <!--<ImageView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="64dp"-->
                    <!--android:src="@drawable/test"/>-->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="1">

                <Button
                    android:text="@string/topraise"
                    android:id="@+id/button"
                    android:layout_gravity = "fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTintMode="multiply" />

                <Button
                    android:text="@string/tocomment"
                    android:id="@+id/button2"
                    android:layout_gravity = "fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTintMode="multiply" />

                <Button
                    android:text="@string/tocollect"
                    android:id="@+id/button3"
                    android:layout_gravity = "fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:backgroundTintMode="multiply" />
            </GridLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>